signout and googlesignin issue resolved

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
       - assets/images/shoes12.jpeg
       - assets/images/order.jpeg
       - assets/images/order.jpeg
+      - assets/images/googleSignin.png
 
 
 
